--- a/1/6.html
+++ b/1/6.html
@@ -8,11 +8,10 @@
 </head>
 <body>
     <script>
-        document.write ("<table border='1'>");
-    for (i=7; i<=7; i++) {
-        document.write("<tr>");
-            for (j=1; j<=10; j++) document.write("<td>"+i*j+"</td>");
-        document.write("</tr>");
+    document.write ("<table border='1'>");
+    x=7;{
+    for (j=1; j<=10; j++) document.write("<td>"+x*j+"</td>");
+    document.write("</tr>");
     }
     </script>
 </body>
