--- a/1/7.html
+++ b/1/7.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-      let n = 500;
+      const n = 500;
       let s = 0;
       for (let i = 1; i <= n; i++) {
         s = s + i;
