--- a/2/3.html
+++ b/2/3.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <script>
-    num = int(input("Please type in a number:"))
+    Array.from(
+    { 
+        length: Math.min(Math.sqrt(N), 100) 
+    }, (n, i) => i + 1);
     </script>
 </body>
 </html>
