--- a/2/2.html
+++ b/2/2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        for(var i = 10; i < 110; i+= 10)
+        for(let i = 10; i < 110; i+= 10)
         console.log(i, i * 27)
     </script>
 </body>
