--- a/2/4.html
+++ b/2/4.html
@@ -8,14 +8,12 @@
 </head>
 <body>
     <script>
-    let n = 10;
-    next:
-    for (let i = 2; i <= n; i++) { 
-      for (let j = 2; j < i; j++) { 
-        if (i % j === 0) continue next; 
-  }
-
-  alert( i ); 
+    {
+    for (let i = 2; i <= sqrt(n); i++) {
+        if (n % i == 0)
+            return false;
+    }
+    return true;
 }
     </script>
 </body>
